fix: correctly apply fg_muted in yazi themes
The 'fg_muted' color was not being correctly applied in generated Yazi themes. This fix updates the 'generate_yazi.lua' script to pull the muted foreground color from 'palette.syntax.comment' instead of 'palette.fg.comment'. Consequently, the 'flavor.toml' files for all Yazi themes now correctly reflect the intended muted foreground color, appearing as a hardcoded value in the generated theme files.

--- a/extras/yazi/themes/dark/flavors/oasis-canyon-dark.yazi/flavor.toml
+++ b/extras/yazi/themes/dark/flavors/oasis-canyon-dark.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#2F1A05", bold = true }
 progress_normal = { fg = "#87CEEB", bg = "#2F1A05" }
 progress_error = { fg = "#F28D8D", bg = "#2F1A05" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#9F7051" }
 perm_type = { fg = "#87CEEB" }
 perm_read = { fg = "#F0E68C" }
 perm_write = { fg = "#F28D8D" }
@@ -85,7 +85,7 @@ cand = { fg = "#87CEEB" }
 rest = { fg = "#FFD8BC" }
 desc = { fg = "#87CEEB" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#9F7051" }
 
 # HELP
 [help]
