--- a/extras/yazi/themes/dark/flavors/oasis-desert-dark.yazi/flavor.toml
+++ b/extras/yazi/themes/dark/flavors/oasis-desert-dark.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#333333", bold = true }
 progress_normal = { fg = "#87CEEB", bg = "#333333" }
 progress_error = { fg = "#FFACA5", bg = "#333333" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#6D90A8" }
 perm_type = { fg = "#87CEEB" }
 perm_read = { fg = "#F0E68C" }
 perm_write = { fg = "#FFACA5" }
@@ -85,7 +85,7 @@ cand = { fg = "#F0E68C" }
 rest = { fg = "#E5D9CE" }
 desc = { fg = "#87CEEB" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#6D90A8" }
 
 # HELP
 [help]
