--- a/extras/yazi/themes/dark/flavors/oasis-dune-dark.yazi/flavor.toml
+++ b/extras/yazi/themes/dark/flavors/oasis-dune-dark.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#2E2620", bold = true }
 progress_normal = { fg = "#87CEEB", bg = "#2E2620" }
 progress_error = { fg = "#F29B9B", bg = "#2E2620" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#8A7663" }
 perm_type = { fg = "#87CEEB" }
 perm_read = { fg = "#F0E68C" }
 perm_write = { fg = "#F29B9B" }
@@ -85,7 +85,7 @@ cand = { fg = "#A7D3A9" }
 rest = { fg = "#EDE8AF" }
 desc = { fg = "#87CEEB" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#8A7663" }
 
 # HELP
 [help]
