--- a/extras/yazi/themes/dark/flavors/oasis-lagoon-dark.yazi/flavor.toml
+++ b/extras/yazi/themes/dark/flavors/oasis-lagoon-dark.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#101825", bold = true }
 progress_normal = { fg = "#87CEEB", bg = "#101825" }
 progress_error = { fg = "#F58888", bg = "#101825" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#467B99" }
 perm_type = { fg = "#87CEEB" }
 perm_read = { fg = "#F0E68C" }
 perm_write = { fg = "#F58888" }
@@ -85,7 +85,7 @@ cand = { fg = "#FFA247" }
 rest = { fg = "#D0E2F0" }
 desc = { fg = "#87CEEB" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#467B99" }
 
 # HELP
 [help]
