--- a/extras/yazi/themes/dark/flavors/oasis-midnight-dark.yazi/flavor.toml
+++ b/extras/yazi/themes/dark/flavors/oasis-midnight-dark.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#101418", bold = true }
 progress_normal = { fg = "#87CEEB", bg = "#101418" }
 progress_error = { fg = "#F0E68C", bg = "#101418" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#5F7390" }
 perm_type = { fg = "#87CEEB" }
 perm_read = { fg = "#F0E68C" }
 perm_write = { fg = "#F0E68C" }
@@ -85,7 +85,7 @@ cand = { fg = "#FFA852" }
 rest = { fg = "#FFE0CC" }
 desc = { fg = "#87CEEB" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#5F7390" }
 
 # HELP
 [help]
