--- a/extras/yazi/themes/dark/flavors/oasis-mirage-dark.yazi/flavor.toml
+++ b/extras/yazi/themes/dark/flavors/oasis-mirage-dark.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#18252A", bold = true }
 progress_normal = { fg = "#87CEEB", bg = "#18252A" }
 progress_error = { fg = "#F39493", bg = "#18252A" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#387F74" }
 perm_type = { fg = "#87CEEB" }
 perm_read = { fg = "#F0E68C" }
 perm_write = { fg = "#F39493" }
@@ -85,7 +85,7 @@ cand = { fg = "#FFA247" }
 rest = { fg = "#C9EEE6" }
 desc = { fg = "#87CEEB" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#387F74" }
 
 # HELP
 [help]
