--- a/extras/yazi/themes/dark/flavors/oasis-night-dark.yazi/flavor.toml
+++ b/extras/yazi/themes/dark/flavors/oasis-night-dark.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#0D0D1A", bold = true }
 progress_normal = { fg = "#87CEEB", bg = "#0D0D1A" }
 progress_error = { fg = "#F0E68C", bg = "#0D0D1A" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#6A6E8B" }
 perm_type = { fg = "#87CEEB" }
 perm_read = { fg = "#F0E68C" }
 perm_write = { fg = "#F0E68C" }
@@ -85,7 +85,7 @@ cand = { fg = "#FFA247" }
 rest = { fg = "#F2E8D8" }
 desc = { fg = "#87CEEB" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#6A6E8B" }
 
 # HELP
 [help]
