--- a/extras/yazi/themes/dark/flavors/oasis-rose-dark.yazi/flavor.toml
+++ b/extras/yazi/themes/dark/flavors/oasis-rose-dark.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#301828", bold = true }
 progress_normal = { fg = "#87CEEB", bg = "#301828" }
 progress_error = { fg = "#F0E68C", bg = "#301828" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#9F6C85" }
 perm_type = { fg = "#87CEEB" }
 perm_read = { fg = "#F0E68C" }
 perm_write = { fg = "#F0E68C" }
@@ -85,7 +85,7 @@ cand = { fg = "#F4E36B" }
 rest = { fg = "#EBBEDF" }
 desc = { fg = "#87CEEB" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#9F6C85" }
 
 # HELP
 [help]
