--- a/extras/yazi/themes/dark/flavors/oasis-sol-dark.yazi/flavor.toml
+++ b/extras/yazi/themes/dark/flavors/oasis-sol-dark.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#2F1815", bold = true }
 progress_normal = { fg = "#87CEEB", bg = "#2F1815" }
 progress_error = { fg = "#F0E68C", bg = "#2F1815" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#987069" }
 perm_type = { fg = "#87CEEB" }
 perm_read = { fg = "#F0E68C" }
 perm_write = { fg = "#F0E68C" }
@@ -85,7 +85,7 @@ cand = { fg = "#FFA247" }
 rest = { fg = "#FFD3CB" }
 desc = { fg = "#87CEEB" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#987069" }
 
 # HELP
 [help]
