--- a/extras/yazi/themes/dark/flavors/oasis-starlight-dark.yazi/flavor.toml
+++ b/extras/yazi/themes/dark/flavors/oasis-starlight-dark.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#000000", bold = true }
 progress_normal = { fg = "#87CEEB", bg = "#000000" }
 progress_error = { fg = "#ED7777", bg = "#000000" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#7FA5CC" }
 perm_type = { fg = "#87CEEB" }
 perm_read = { fg = "#F0E68C" }
 perm_write = { fg = "#ED7777" }
@@ -85,7 +85,7 @@ cand = { fg = "#F3EA9F" }
 rest = { fg = "#DCD9D2" }
 desc = { fg = "#87CEEB" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#7FA5CC" }
 
 # HELP
 [help]
