--- a/extras/yazi/themes/dark/flavors/oasis-twilight-dark.yazi/flavor.toml
+++ b/extras/yazi/themes/dark/flavors/oasis-twilight-dark.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#221B2F", bold = true }
 progress_normal = { fg = "#87CEEB", bg = "#221B2F" }
 progress_error = { fg = "#F28D8D", bg = "#221B2F" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#8073A1" }
 perm_type = { fg = "#87CEEB" }
 perm_read = { fg = "#F0E68C" }
 perm_write = { fg = "#F28D8D" }
@@ -85,7 +85,7 @@ cand = { fg = "#F3EA9F" }
 rest = { fg = "#E1D2FF" }
 desc = { fg = "#87CEEB" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#8073A1" }
 
 # HELP
 [help]
