--- a/extras/yazi/themes/light/1/flavors/oasis-desert-light-1.yazi/flavor.toml
+++ b/extras/yazi/themes/light/1/flavors/oasis-desert-light-1.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#f9f7f5", bold = true }
 progress_normal = { fg = "#083142", bg = "#f9f7f5" }
 progress_error = { fg = "#be1d15", bg = "#f9f7f5" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#617486" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#696223" }
 perm_write = { fg = "#be1d15" }
@@ -85,7 +85,7 @@ cand = { fg = "#988c1a" }
 rest = { fg = "#5e5348" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#617486" }
 
 # HELP
 [help]
