--- a/extras/yazi/themes/light/1/flavors/oasis-dune-light-1.yazi/flavor.toml
+++ b/extras/yazi/themes/light/1/flavors/oasis-dune-light-1.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#f9f8f5", bold = true }
 progress_normal = { fg = "#083142", bg = "#f9f8f5" }
 progress_error = { fg = "#b72b30", bg = "#f9f8f5" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#7d7065" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#696323" }
 perm_write = { fg = "#b72b30" }
@@ -85,7 +85,7 @@ cand = { fg = "#3e7540" }
 rest = { fg = "#58573a" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#7d7065" }
 
 # HELP
 [help]
