--- a/extras/yazi/themes/light/1/flavors/oasis-sol-light-1.yazi/flavor.toml
+++ b/extras/yazi/themes/light/1/flavors/oasis-sol-light-1.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#f9f5f5", bold = true }
 progress_normal = { fg = "#083142", bg = "#f9f5f5" }
 progress_error = { fg = "#6c6119", bg = "#f9f5f5" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#846c68" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#686223" }
 perm_write = { fg = "#6c6119" }
@@ -85,7 +85,7 @@ cand = { fg = "#ab5807" }
 rest = { fg = "#814236" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#846c68" }
 
 # HELP
 [help]
