--- a/extras/yazi/themes/light/2/flavors/oasis-desert-light-2.yazi/flavor.toml
+++ b/extras/yazi/themes/light/2/flavors/oasis-desert-light-2.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#f8f0e7", bold = true }
 progress_normal = { fg = "#083142", bg = "#f8f0e7" }
 progress_error = { fg = "#b81c14", bg = "#f8f0e7" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#5d7182" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#655f22" }
 perm_write = { fg = "#b81c14" }
@@ -85,7 +85,7 @@ cand = { fg = "#918517" }
 rest = { fg = "#5a5046" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#5d7182" }
 
 # HELP
 [help]
