--- a/extras/yazi/themes/light/2/flavors/oasis-dune-light-2.yazi/flavor.toml
+++ b/extras/yazi/themes/light/2/flavors/oasis-dune-light-2.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#f9f6ec", bold = true }
 progress_normal = { fg = "#083142", bg = "#f9f6ec" }
 progress_error = { fg = "#b42c2f", bg = "#f9f6ec" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#7b6f64" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#686123" }
 perm_write = { fg = "#b42c2f" }
@@ -85,7 +85,7 @@ cand = { fg = "#3a6f3c" }
 rest = { fg = "#585539" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#7b6f64" }
 
 # HELP
 [help]
