--- a/extras/yazi/themes/light/2/flavors/oasis-lagoon-light-2.yazi/flavor.toml
+++ b/extras/yazi/themes/light/2/flavors/oasis-lagoon-light-2.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#ebf1f9", bold = true }
 progress_normal = { fg = "#083142", bg = "#ebf1f9" }
 progress_error = { fg = "#b32328", bg = "#ebf1f9" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#527287" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#655e22" }
 perm_write = { fg = "#b32328" }
@@ -85,7 +85,7 @@ cand = { fg = "#a35305" }
 rest = { fg = "#415361" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#527287" }
 
 # HELP
 [help]
