--- a/extras/yazi/themes/light/2/flavors/oasis-midnight-light-2.yazi/flavor.toml
+++ b/extras/yazi/themes/light/2/flavors/oasis-midnight-light-2.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#f8eee7", bold = true }
 progress_normal = { fg = "#083142", bg = "#f8eee7" }
 progress_error = { fg = "#675d19", bg = "#f8eee7" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#626e81" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#655e22" }
 perm_write = { fg = "#675d19" }
@@ -85,7 +85,7 @@ cand = { fg = "#a35405" }
 rest = { fg = "#6e482e" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#626e81" }
 
 # HELP
 [help]
