--- a/extras/yazi/themes/light/2/flavors/oasis-mirage-light-2.yazi/flavor.toml
+++ b/extras/yazi/themes/light/2/flavors/oasis-mirage-light-2.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#ebf9f9", bold = true }
 progress_normal = { fg = "#083142", bg = "#ebf9f9" }
 progress_error = { fg = "#b7282c", bg = "#ebf9f9" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#4a7a73" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#686123" }
 perm_write = { fg = "#b7282c" }
@@ -85,7 +85,7 @@ cand = { fg = "#a35305" }
 rest = { fg = "#3f5954" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#4a7a73" }
 
 # HELP
 [help]
