--- a/extras/yazi/themes/light/2/flavors/oasis-night-light-2.yazi/flavor.toml
+++ b/extras/yazi/themes/light/2/flavors/oasis-night-light-2.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#e9deb9", bold = true }
 progress_normal = { fg = "#083142", bg = "#e9deb9" }
 progress_error = { fg = "#9d2227", bg = "#e9deb9" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#785d4e" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#59531e" }
 perm_write = { fg = "#9d2227" }
@@ -85,7 +85,7 @@ cand = { fg = "#a35305" }
 rest = { fg = "#5f3f27" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#785d4e" }
 
 # HELP
 [help]
