--- a/extras/yazi/themes/light/2/flavors/oasis-rose-light-2.yazi/flavor.toml
+++ b/extras/yazi/themes/light/2/flavors/oasis-rose-light-2.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#f9ecf5", bold = true }
 progress_normal = { fg = "#083142", bg = "#f9ecf5" }
 progress_error = { fg = "#675d19", bg = "#f9ecf5" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#846474" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#645e22" }
 perm_write = { fg = "#675d19" }
@@ -85,7 +85,7 @@ cand = { fg = "#988710" }
 rest = { fg = "#67465f" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#846474" }
 
 # HELP
 [help]
