--- a/extras/yazi/themes/light/2/flavors/oasis-sol-light-2.yazi/flavor.toml
+++ b/extras/yazi/themes/light/2/flavors/oasis-sol-light-2.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#f8eae7", bold = true }
 progress_normal = { fg = "#083142", bg = "#f8eae7" }
 progress_error = { fg = "#665c19", bg = "#f8eae7" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#7e6663" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#635c21" }
 perm_write = { fg = "#665c19" }
@@ -85,7 +85,7 @@ cand = { fg = "#a35305" }
 rest = { fg = "#7a3e32" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#7e6663" }
 
 # HELP
 [help]
