--- a/extras/yazi/themes/light/2/flavors/oasis-starlight-light-2.yazi/flavor.toml
+++ b/extras/yazi/themes/light/2/flavors/oasis-starlight-light-2.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#f9f5ec", bold = true }
 progress_normal = { fg = "#083142", bg = "#f9f5ec" }
 progress_error = { fg = "#b42c2f", bg = "#f9f5ec" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#567398" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#686123" }
 perm_write = { fg = "#b42c2f" }
@@ -85,7 +85,7 @@ cand = { fg = "#928417" }
 rest = { fg = "#55544c" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#567398" }
 
 # HELP
 [help]
