--- a/extras/yazi/themes/light/2/flavors/oasis-twilight-light-2.yazi/flavor.toml
+++ b/extras/yazi/themes/light/2/flavors/oasis-twilight-light-2.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#efecf9", bold = true }
 progress_normal = { fg = "#083142", bg = "#efecf9" }
 progress_error = { fg = "#ae262b", bg = "#efecf9" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#716886" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#635d21" }
 perm_write = { fg = "#ae262b" }
@@ -85,7 +85,7 @@ cand = { fg = "#928417" }
 rest = { fg = "#59428b" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#716886" }
 
 # HELP
 [help]
