--- a/extras/yazi/themes/light/3/flavors/oasis-cactus-light-3.yazi/flavor.toml
+++ b/extras/yazi/themes/light/3/flavors/oasis-cactus-light-3.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#e0f0e7", bold = true }
 progress_normal = { fg = "#083142", bg = "#e0f0e7" }
 progress_error = { fg = "#ac2529", bg = "#e0f0e7" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#5a715d" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#625c21" }
 perm_write = { fg = "#ac2529" }
@@ -85,7 +85,7 @@ cand = { fg = "#9b0303" }
 rest = { fg = "#3c5441" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#5a715d" }
 
 # HELP
 [help]
