--- a/extras/yazi/themes/light/3/flavors/oasis-desert-light-3.yazi/flavor.toml
+++ b/extras/yazi/themes/light/3/flavors/oasis-desert-light-3.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#f7e7d4", bold = true }
 progress_normal = { fg = "#083142", bg = "#f7e7d4" }
 progress_error = { fg = "#af1a13", bg = "#f7e7d4" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#596c7b" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#615a20" }
 perm_write = { fg = "#af1a13" }
@@ -85,7 +85,7 @@ cand = { fg = "#897e15" }
 rest = { fg = "#564b42" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#596c7b" }
 
 # HELP
 [help]
