--- a/extras/yazi/themes/light/3/flavors/oasis-mirage-light-3.yazi/flavor.toml
+++ b/extras/yazi/themes/light/3/flavors/oasis-mirage-light-3.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#dbf5f5", bold = true }
 progress_normal = { fg = "#083142", bg = "#dbf5f5" }
 progress_error = { fg = "#b0262a", bg = "#dbf5f5" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#47766e" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#655e21" }
 perm_write = { fg = "#b0262a" }
@@ -85,7 +85,7 @@ cand = { fg = "#9b4e03" }
 rest = { fg = "#3c5651" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#47766e" }
 
 # HELP
 [help]
