--- a/extras/yazi/themes/light/3/flavors/oasis-night-light-3.yazi/flavor.toml
+++ b/extras/yazi/themes/light/3/flavors/oasis-night-light-3.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#e6dbb2", bold = true }
 progress_normal = { fg = "#083142", bg = "#e6dbb2" }
 progress_error = { fg = "#992126", bg = "#e6dbb2" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#755b4c" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#57511d" }
 perm_write = { fg = "#992126" }
@@ -85,7 +85,7 @@ cand = { fg = "#9b4e03" }
 rest = { fg = "#5d3d28" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#755b4c" }
 
 # HELP
 [help]
