--- a/extras/yazi/themes/light/3/flavors/oasis-sol-light-3.yazi/flavor.toml
+++ b/extras/yazi/themes/light/3/flavors/oasis-sol-light-3.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#f7d9d4", bold = true }
 progress_normal = { fg = "#083142", bg = "#f7d9d4" }
 progress_error = { fg = "#5d5317", bg = "#f7d9d4" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#755f5b" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#5b541e" }
 perm_write = { fg = "#5d5317" }
@@ -85,7 +85,7 @@ cand = { fg = "#9b4e03" }
 rest = { fg = "#6e382f" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#755f5b" }
 
 # HELP
 [help]
