--- a/extras/yazi/themes/light/3/flavors/oasis-starlight-light-3.yazi/flavor.toml
+++ b/extras/yazi/themes/light/3/flavors/oasis-starlight-light-3.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#f4eddd", bold = true }
 progress_normal = { fg = "#083142", bg = "#f4eddd" }
 progress_error = { fg = "#ab2a2e", bg = "#f4eddd" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#526e92" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#645d21" }
 perm_write = { fg = "#ab2a2e" }
@@ -85,7 +85,7 @@ cand = { fg = "#8a7d14" }
 rest = { fg = "#524f49" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#526e92" }
 
 # HELP
 [help]
