--- a/extras/yazi/themes/light/3/flavors/oasis-twilight-light-3.yazi/flavor.toml
+++ b/extras/yazi/themes/light/3/flavors/oasis-twilight-light-3.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#e2ddf4", bold = true }
 progress_normal = { fg = "#083142", bg = "#e2ddf4" }
 progress_error = { fg = "#9f2328", bg = "#e2ddf4" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#695f7b" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#5b541e" }
 perm_write = { fg = "#9f2328" }
@@ -85,7 +85,7 @@ cand = { fg = "#8a7d14" }
 rest = { fg = "#503b7d" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#695f7b" }
 
 # HELP
 [help]
