--- a/extras/yazi/themes/light/4/flavors/oasis-abyss-light-4.yazi/flavor.toml
+++ b/extras/yazi/themes/light/4/flavors/oasis-abyss-light-4.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#f5ddc7", bold = true }
 progress_normal = { fg = "#083142", bg = "#f5ddc7" }
 progress_error = { fg = "#5a5529", bg = "#f5ddc7" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#58676f" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#5b551f" }
 perm_write = { fg = "#5a5529" }
@@ -85,7 +85,7 @@ cand = { fg = "#924901" }
 rest = { fg = "#693c2c" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#58676f" }
 
 # HELP
 [help]
