--- a/extras/yazi/themes/light/4/flavors/oasis-cactus-light-4.yazi/flavor.toml
+++ b/extras/yazi/themes/light/4/flavors/oasis-cactus-light-4.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#d6f0e1", bold = true }
 progress_normal = { fg = "#083142", bg = "#d6f0e1" }
 progress_error = { fg = "#aa2429", bg = "#d6f0e1" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#5a6f5c" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#615a20" }
 perm_write = { fg = "#aa2429" }
@@ -85,7 +85,7 @@ cand = { fg = "#920101" }
 rest = { fg = "#3b5340" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#5a6f5c" }
 
 # HELP
 [help]
