--- a/extras/yazi/themes/light/4/flavors/oasis-canyon-light-4.yazi/flavor.toml
+++ b/extras/yazi/themes/light/4/flavors/oasis-canyon-light-4.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#f5dfc7", bold = true }
 progress_normal = { fg = "#083142", bg = "#f5dfc7" }
 progress_error = { fg = "#a12529", bg = "#f5dfc7" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#7b604f" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#5c561f" }
 perm_write = { fg = "#a12529" }
@@ -85,7 +85,7 @@ cand = { fg = "#16607e" }
 rest = { fg = "#63412a" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#7b604f" }
 
 # HELP
 [help]
