--- a/extras/yazi/themes/light/4/flavors/oasis-desert-light-4.yazi/flavor.toml
+++ b/extras/yazi/themes/light/4/flavors/oasis-desert-light-4.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#f5dfc7", bold = true }
 progress_normal = { fg = "#083142", bg = "#f5dfc7" }
 progress_error = { fg = "#a81912", bg = "#f5dfc7" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#556776" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#5c561f" }
 perm_write = { fg = "#a81912" }
@@ -85,7 +85,7 @@ cand = { fg = "#827712" }
 rest = { fg = "#50473f" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#556776" }
 
 # HELP
 [help]
