--- a/extras/yazi/themes/light/4/flavors/oasis-dune-light-4.yazi/flavor.toml
+++ b/extras/yazi/themes/light/4/flavors/oasis-dune-light-4.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#f0e9d1", bold = true }
 progress_normal = { fg = "#083142", bg = "#f0e9d1" }
 progress_error = { fg = "#a7292d", bg = "#f0e9d1" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#73685c" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#605a20" }
 perm_write = { fg = "#a7292d" }
@@ -85,7 +85,7 @@ cand = { fg = "#326234" }
 rest = { fg = "#504d34" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#73685c" }
 
 # HELP
 [help]
