--- a/extras/yazi/themes/light/4/flavors/oasis-midnight-light-4.yazi/flavor.toml
+++ b/extras/yazi/themes/light/4/flavors/oasis-midnight-light-4.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#f5d8c7", bold = true }
 progress_normal = { fg = "#083142", bg = "#f5d8c7" }
 progress_error = { fg = "#5b5216", bg = "#f5d8c7" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#596375" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#59531e" }
 perm_write = { fg = "#5b5216" }
@@ -85,7 +85,7 @@ cand = { fg = "#924a01" }
 rest = { fg = "#603e29" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#596375" }
 
 # HELP
 [help]
