--- a/extras/yazi/themes/light/4/flavors/oasis-mirage-light-4.yazi/flavor.toml
+++ b/extras/yazi/themes/light/4/flavors/oasis-mirage-light-4.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#cdf4f4", bold = true }
 progress_normal = { fg = "#083142", bg = "#cdf4f4" }
 progress_error = { fg = "#ad2529", bg = "#cdf4f4" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#45746d" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#625c21" }
 perm_write = { fg = "#ad2529" }
@@ -85,7 +85,7 @@ cand = { fg = "#924901" }
 rest = { fg = "#3c534e" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#45746d" }
 
 # HELP
 [help]
