--- a/extras/yazi/themes/light/4/flavors/oasis-rose-light-4.yazi/flavor.toml
+++ b/extras/yazi/themes/light/4/flavors/oasis-rose-light-4.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#f3ceea", bold = true }
 progress_normal = { fg = "#083142", bg = "#f3ceea" }
 progress_error = { fg = "#584f15", bg = "#f3ceea" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#745766" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#56501d" }
 perm_write = { fg = "#584f15" }
@@ -85,7 +85,7 @@ cand = { fg = "#88790c" }
 rest = { fg = "#563a4f" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#745766" }
 
 # HELP
 [help]
