--- a/extras/yazi/themes/light/4/flavors/oasis-sol-light-4.yazi/flavor.toml
+++ b/extras/yazi/themes/light/4/flavors/oasis-sol-light-4.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#f5cdc7", bold = true }
 progress_normal = { fg = "#083142", bg = "#f5cdc7" }
 progress_error = { fg = "#564e15", bg = "#f5cdc7" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#6e5955" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#544e1c" }
 perm_write = { fg = "#564e15" }
@@ -85,7 +85,7 @@ cand = { fg = "#924901" }
 rest = { fg = "#65332b" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#6e5955" }
 
 # HELP
 [help]
