--- a/extras/yazi/themes/light/4/flavors/oasis-twilight-light-4.yazi/flavor.toml
+++ b/extras/yazi/themes/light/4/flavors/oasis-twilight-light-4.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#d7cef3", bold = true }
 progress_normal = { fg = "#083142", bg = "#d7cef3" }
 progress_error = { fg = "#8f2124", bg = "#d7cef3" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#605770" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#524c1b" }
 perm_write = { fg = "#8f2124" }
@@ -85,7 +85,7 @@ cand = { fg = "#827612" }
 rest = { fg = "#48356f" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#605770" }
 
 # HELP
 [help]
