--- a/extras/yazi/themes/light/5/flavors/oasis-cactus-light-5.yazi/flavor.toml
+++ b/extras/yazi/themes/light/5/flavors/oasis-cactus-light-5.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#cbebd7", bold = true }
 progress_normal = { fg = "#083142", bg = "#cbebd7" }
 progress_error = { fg = "#a22527", bg = "#cbebd7" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#556b57" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#5c561f" }
 perm_write = { fg = "#a22527" }
@@ -85,7 +85,7 @@ cand = { fg = "#8a0000" }
 rest = { fg = "#384f3d" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#556b57" }
 
 # HELP
 [help]
