--- a/extras/yazi/themes/light/5/flavors/oasis-canyon-light-5.yazi/flavor.toml
+++ b/extras/yazi/themes/light/5/flavors/oasis-canyon-light-5.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#f3d5ba", bold = true }
 progress_normal = { fg = "#083142", bg = "#f3d5ba" }
 progress_error = { fg = "#982226", bg = "#f3d5ba" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#755a4b" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#56511d" }
 perm_write = { fg = "#982226" }
@@ -85,7 +85,7 @@ cand = { fg = "#145a76" }
 rest = { fg = "#5c3c26" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#755a4b" }
 
 # HELP
 [help]
