--- a/extras/yazi/themes/light/5/flavors/oasis-lagoon-light-5.yazi/flavor.toml
+++ b/extras/yazi/themes/light/5/flavors/oasis-lagoon-light-5.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#bcd6f5", bold = true }
 progress_normal = { fg = "#083142", bg = "#bcd6f5" }
 progress_error = { fg = "#931d20", bg = "#bcd6f5" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#465f71" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#524d1b" }
 perm_write = { fg = "#931d20" }
@@ -85,7 +85,7 @@ cand = { fg = "#8a4400" }
 rest = { fg = "#33414c" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#465f71" }
 
 # HELP
 [help]
