--- a/extras/yazi/themes/light/5/flavors/oasis-mirage-light-5.yazi/flavor.toml
+++ b/extras/yazi/themes/light/5/flavors/oasis-mirage-light-5.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#c0f2ee", bold = true }
 progress_normal = { fg = "#083142", bg = "#c0f2ee" }
 progress_error = { fg = "#a82628", bg = "#c0f2ee" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#43716a" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#605a20" }
 perm_write = { fg = "#a82628" }
@@ -85,7 +85,7 @@ cand = { fg = "#8a4400" }
 rest = { fg = "#39514c" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#43716a" }
 
 # HELP
 [help]
