--- a/extras/yazi/themes/light/5/flavors/oasis-rose-light-5.yazi/flavor.toml
+++ b/extras/yazi/themes/light/5/flavors/oasis-rose-light-5.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#f0c2e7", bold = true }
 progress_normal = { fg = "#083142", bg = "#f0c2e7" }
 progress_error = { fg = "#514a14", bg = "#f0c2e7" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#6c525f" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#4f4a1a" }
 perm_write = { fg = "#514a14" }
@@ -85,7 +85,7 @@ cand = { fg = "#80710a" }
 rest = { fg = "#4f3547" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#6c525f" }
 
 # HELP
 [help]
