--- a/extras/yazi/themes/dark/flavors/oasis-cactus-dark.yazi/flavor.toml
+++ b/extras/yazi/themes/dark/flavors/oasis-cactus-dark.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#1C261E", bold = true }
 progress_normal = { fg = "#87CEEB", bg = "#1C261E" }
 progress_error = { fg = "#F39493", bg = "#1C261E" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#608864" }
 perm_type = { fg = "#87CEEB" }
 perm_read = { fg = "#F0E68C" }
 perm_write = { fg = "#F39493" }
@@ -85,7 +85,7 @@ cand = { fg = "#FF8080" }
 rest = { fg = "#C7EDCF" }
 desc = { fg = "#87CEEB" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#608864" }
 
 # HELP
 [help]
