--- a/extras/yazi/themes/light/1/flavors/oasis-abyss-light-1.yazi/flavor.toml
+++ b/extras/yazi/themes/light/1/flavors/oasis-abyss-light-1.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#f9f7f5", bold = true }
 progress_normal = { fg = "#083142", bg = "#f9f7f5" }
 progress_error = { fg = "#68622f", bg = "#f9f7f5" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#63757e" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#696223" }
 perm_write = { fg = "#68622f" }
@@ -85,7 +85,7 @@ cand = { fg = "#ab5807" }
 rest = { fg = "#7c4734" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#63757e" }
 
 # HELP
 [help]
