--- a/extras/yazi/themes/light/1/flavors/oasis-lagoon-light-1.yazi/flavor.toml
+++ b/extras/yazi/themes/light/1/flavors/oasis-lagoon-light-1.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#f9fafb", bold = true }
 progress_normal = { fg = "#083142", bg = "#f9fafb" }
 progress_error = { fg = "#be2429", bg = "#f9fafb" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#577790" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#6a6423" }
 perm_write = { fg = "#be2429" }
@@ -85,7 +85,7 @@ cand = { fg = "#ab5807" }
 rest = { fg = "#465968" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#577790" }
 
 # HELP
 [help]
