--- a/extras/yazi/themes/light/1/flavors/oasis-mirage-light-1.yazi/flavor.toml
+++ b/extras/yazi/themes/light/1/flavors/oasis-mirage-light-1.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#f9fbfa", bold = true }
 progress_normal = { fg = "#083142", bg = "#f9fbfa" }
 progress_error = { fg = "#bb292d", bg = "#f9fbfa" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#4a7d76" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#6b6424" }
 perm_write = { fg = "#bb292d" }
@@ -85,7 +85,7 @@ cand = { fg = "#ab5807" }
 rest = { fg = "#415c55" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#4a7d76" }
 
 # HELP
 [help]
