--- a/extras/yazi/themes/light/1/flavors/oasis-night-light-1.yazi/flavor.toml
+++ b/extras/yazi/themes/light/1/flavors/oasis-night-light-1.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#e0dbcc", bold = true }
 progress_normal = { fg = "#083142", bg = "#e0dbcc" }
 progress_error = { fg = "#992226", bg = "#e0dbcc" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#755b4c" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#57511d" }
 perm_write = { fg = "#992226" }
@@ -85,7 +85,7 @@ cand = { fg = "#ab5807" }
 rest = { fg = "#5d3d27" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#755b4c" }
 
 # HELP
 [help]
