--- a/extras/yazi/themes/light/1/flavors/oasis-rose-light-1.yazi/flavor.toml
+++ b/extras/yazi/themes/light/1/flavors/oasis-rose-light-1.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#fbf9fb", bold = true }
 progress_normal = { fg = "#083142", bg = "#fbf9fb" }
 progress_error = { fg = "#6e631a", bg = "#fbf9fb" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#8b6a7a" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#6a6423" }
 perm_write = { fg = "#6e631a" }
@@ -85,7 +85,7 @@ cand = { fg = "#a08e13" }
 rest = { fg = "#6f4b65" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#8b6a7a" }
 
 # HELP
 [help]
