--- a/extras/yazi/themes/light/1/flavors/oasis-twilight-light-1.yazi/flavor.toml
+++ b/extras/yazi/themes/light/1/flavors/oasis-twilight-light-1.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#f9f9fb", bold = true }
 progress_normal = { fg = "#083142", bg = "#f9f9fb" }
 progress_error = { fg = "#ba292e", bg = "#f9f9fb" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#796e90" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#6a6323" }
 perm_write = { fg = "#ba292e" }
@@ -85,7 +85,7 @@ cand = { fg = "#998b19" }
 rest = { fg = "#614797" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#796e90" }
 
 # HELP
 [help]
