--- a/extras/yazi/themes/light/2/flavors/oasis-abyss-light-2.yazi/flavor.toml
+++ b/extras/yazi/themes/light/2/flavors/oasis-abyss-light-2.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#f8f0e7", bold = true }
 progress_normal = { fg = "#083142", bg = "#f8f0e7" }
 progress_error = { fg = "#645e2d", bg = "#f8f0e7" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#617179" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#655f22" }
 perm_write = { fg = "#645e2d" }
@@ -85,7 +85,7 @@ cand = { fg = "#a35305" }
 rest = { fg = "#774431" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#617179" }
 
 # HELP
 [help]
