--- a/extras/yazi/themes/light/2/flavors/oasis-cactus-light-2.yazi/flavor.toml
+++ b/extras/yazi/themes/light/2/flavors/oasis-cactus-light-2.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#eef7f2", bold = true }
 progress_normal = { fg = "#083142", bg = "#eef7f2" }
 progress_error = { fg = "#b5282c", bg = "#eef7f2" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#5f7760" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#686123" }
 perm_write = { fg = "#b5282c" }
@@ -85,7 +85,7 @@ cand = { fg = "#a30505" }
 rest = { fg = "#405945" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#5f7760" }
 
 # HELP
 [help]
