--- a/extras/yazi/themes/light/3/flavors/oasis-abyss-light-3.yazi/flavor.toml
+++ b/extras/yazi/themes/light/3/flavors/oasis-abyss-light-3.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#f7e5d4", bold = true }
 progress_normal = { fg = "#083142", bg = "#f7e5d4" }
 progress_error = { fg = "#5e592b", bg = "#f7e5d4" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#5b6b72" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#605920" }
 perm_write = { fg = "#5e592b" }
@@ -85,7 +85,7 @@ cand = { fg = "#9b4e03" }
 rest = { fg = "#6f402f" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#5b6b72" }
 
 # HELP
 [help]
