--- a/extras/yazi/themes/light/3/flavors/oasis-dune-light-3.yazi/flavor.toml
+++ b/extras/yazi/themes/light/3/flavors/oasis-dune-light-3.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#f4efdd", bold = true }
 progress_normal = { fg = "#083142", bg = "#f4efdd" }
 progress_error = { fg = "#ad2a2e", bg = "#f4efdd" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#776b60" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#645d21" }
 perm_write = { fg = "#ad2a2e" }
@@ -85,7 +85,7 @@ cand = { fg = "#366838" }
 rest = { fg = "#535136" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#776b60" }
 
 # HELP
 [help]
