--- a/extras/yazi/themes/light/3/flavors/oasis-lagoon-light-3.yazi/flavor.toml
+++ b/extras/yazi/themes/light/3/flavors/oasis-lagoon-light-3.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#d9e5f7", bold = true }
 progress_normal = { fg = "#083142", bg = "#d9e5f7" }
 progress_error = { fg = "#a62025", bg = "#d9e5f7" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#4c6a7e" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#5d571f" }
 perm_write = { fg = "#a62025" }
@@ -85,7 +85,7 @@ cand = { fg = "#9b4e03" }
 rest = { fg = "#3c4c59" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#4c6a7e" }
 
 # HELP
 [help]
