--- a/extras/yazi/themes/light/3/flavors/oasis-midnight-light-3.yazi/flavor.toml
+++ b/extras/yazi/themes/light/3/flavors/oasis-midnight-light-3.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#f7e2d4", bold = true }
 progress_normal = { fg = "#083142", bg = "#f7e2d4" }
 progress_error = { fg = "#625718", bg = "#f7e2d4" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#5d687a" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#5e581f" }
 perm_write = { fg = "#625718" }
@@ -85,7 +85,7 @@ cand = { fg = "#9b4f03" }
 rest = { fg = "#66432b" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#5d687a" }
 
 # HELP
 [help]
