--- a/extras/yazi/themes/light/3/flavors/oasis-rose-light-3.yazi/flavor.toml
+++ b/extras/yazi/themes/light/3/flavors/oasis-rose-light-3.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#f4ddee", bold = true }
 progress_normal = { fg = "#083142", bg = "#f4ddee" }
 progress_error = { fg = "#605617", bg = "#f4ddee" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#7c5e6c" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#5d561f" }
 perm_write = { fg = "#605617" }
@@ -85,7 +85,7 @@ cand = { fg = "#90800e" }
 rest = { fg = "#5f4056" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#7c5e6c" }
 
 # HELP
 [help]
