--- a/extras/yazi/themes/light/4/flavors/oasis-lagoon-light-4.yazi/flavor.toml
+++ b/extras/yazi/themes/light/4/flavors/oasis-lagoon-light-4.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#c9dcf7", bold = true }
 progress_normal = { fg = "#083142", bg = "#c9dcf7" }
 progress_error = { fg = "#9a1f23", bg = "#c9dcf7" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#496476" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#57511d" }
 perm_write = { fg = "#9a1f23" }
@@ -85,7 +85,7 @@ cand = { fg = "#924901" }
 rest = { fg = "#374652" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#496476" }
 
 # HELP
 [help]
