--- a/extras/yazi/themes/light/4/flavors/oasis-night-light-4.yazi/flavor.toml
+++ b/extras/yazi/themes/light/4/flavors/oasis-night-light-4.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#e3d7aa", bold = true }
 progress_normal = { fg = "#083142", bg = "#e3d7aa" }
 progress_error = { fg = "#942225", bg = "#e3d7aa" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#72594a" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#544f1c" }
 perm_write = { fg = "#942225" }
@@ -85,7 +85,7 @@ cand = { fg = "#924901" }
 rest = { fg = "#593b26" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#72594a" }
 
 # HELP
 [help]
