--- a/extras/yazi/themes/light/4/flavors/oasis-starlight-light-4.yazi/flavor.toml
+++ b/extras/yazi/themes/light/4/flavors/oasis-starlight-light-4.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#f0e6d1", bold = true }
 progress_normal = { fg = "#083142", bg = "#f0e6d1" }
 progress_error = { fg = "#a4282c", bg = "#f0e6d1" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#4e6a8d" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#5f5820" }
 perm_write = { fg = "#a4282c" }
@@ -85,7 +85,7 @@ cand = { fg = "#827612" }
 rest = { fg = "#4e4b44" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#4e6a8d" }
 
 # HELP
 [help]
