--- a/extras/yazi/themes/light/5/flavors/oasis-abyss-light-5.yazi/flavor.toml
+++ b/extras/yazi/themes/light/5/flavors/oasis-abyss-light-5.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#f3d2ba", bold = true }
 progress_normal = { fg = "#083142", bg = "#f3d2ba" }
 progress_error = { fg = "#554f27", bg = "#f3d2ba" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#526168" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#554f1c" }
 perm_write = { fg = "#554f27" }
@@ -85,7 +85,7 @@ cand = { fg = "#8a4400" }
 rest = { fg = "#623828" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#526168" }
 
 # HELP
 [help]
