--- a/extras/yazi/themes/light/5/flavors/oasis-desert-light-5.yazi/flavor.toml
+++ b/extras/yazi/themes/light/5/flavors/oasis-desert-light-5.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#f3d5ba", bold = true }
 progress_normal = { fg = "#083142", bg = "#f3d5ba" }
 progress_error = { fg = "#9f1711", bg = "#f3d5ba" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#51626f" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#56511d" }
 perm_write = { fg = "#9f1711" }
@@ -85,7 +85,7 @@ cand = { fg = "#7a6f10" }
 rest = { fg = "#4b423a" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#51626f" }
 
 # HELP
 [help]
