--- a/extras/yazi/themes/light/5/flavors/oasis-dune-light-5.yazi/flavor.toml
+++ b/extras/yazi/themes/light/5/flavors/oasis-dune-light-5.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#ece1c6", bold = true }
 progress_normal = { fg = "#083142", bg = "#ece1c6" }
 progress_error = { fg = "#9f272b", bg = "#ece1c6" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#6e635b" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#5b551e" }
 perm_write = { fg = "#9f272b" }
@@ -85,7 +85,7 @@ cand = { fg = "#2e5c30" }
 rest = { fg = "#4b4931" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#6e635b" }
 
 # HELP
 [help]
