--- a/extras/yazi/themes/light/5/flavors/oasis-midnight-light-5.yazi/flavor.toml
+++ b/extras/yazi/themes/light/5/flavors/oasis-midnight-light-5.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#f3cdba", bold = true }
 progress_normal = { fg = "#083142", bg = "#f3cdba" }
 progress_error = { fg = "#554d15", bg = "#f3cdba" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#545d6e" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#534d1b" }
 perm_write = { fg = "#554d15" }
@@ -85,7 +85,7 @@ cand = { fg = "#8a4400" }
 rest = { fg = "#593925" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#545d6e" }
 
 # HELP
 [help]
