--- a/extras/yazi/themes/light/5/flavors/oasis-night-light-5.yazi/flavor.toml
+++ b/extras/yazi/themes/light/5/flavors/oasis-night-light-5.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#e0cfa3", bold = true }
 progress_normal = { fg = "#083142", bg = "#e0cfa3" }
 progress_error = { fg = "#8c2023", bg = "#e0cfa3" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#6d5547" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#504b1a" }
 perm_write = { fg = "#8c2023" }
@@ -85,7 +85,7 @@ cand = { fg = "#8a4400" }
 rest = { fg = "#543723" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#6d5547" }
 
 # HELP
 [help]
