--- a/extras/yazi/themes/light/5/flavors/oasis-sol-light-5.yazi/flavor.toml
+++ b/extras/yazi/themes/light/5/flavors/oasis-sol-light-5.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#f3bfba", bold = true }
 progress_normal = { fg = "#083142", bg = "#f3bfba" }
 progress_error = { fg = "#4e4713", bg = "#f3bfba" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#665250" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#4c4719" }
 perm_write = { fg = "#4e4713" }
@@ -85,7 +85,7 @@ cand = { fg = "#8a4400" }
 rest = { fg = "#5b2d26" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#665250" }
 
 # HELP
 [help]
