--- a/extras/yazi/themes/light/5/flavors/oasis-starlight-light-5.yazi/flavor.toml
+++ b/extras/yazi/themes/light/5/flavors/oasis-starlight-light-5.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#f3deba", bold = true }
 progress_normal = { fg = "#083142", bg = "#f3deba" }
 progress_error = { fg = "#9d262b", bg = "#f3deba" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#4d6687" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#5b551e" }
 perm_write = { fg = "#9d262b" }
@@ -85,7 +85,7 @@ cand = { fg = "#7a6f0f" }
 rest = { fg = "#494841" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#4d6687" }
 
 # HELP
 [help]
