--- a/extras/yazi/themes/light/5/flavors/oasis-twilight-light-5.yazi/flavor.toml
+++ b/extras/yazi/themes/light/5/flavors/oasis-twilight-light-5.yazi/flavor.toml
@@ -49,7 +49,7 @@ progress_label = { fg = "#cac2f0", bold = true }
 progress_normal = { fg = "#083142", bg = "#cac2f0" }
 progress_error = { fg = "#821d21", bg = "#cac2f0" }
 
-perm_sep = { fg = "{{fg_muted}}" }
+perm_sep = { fg = "#595069" }
 perm_type = { fg = "#083142" }
 perm_read = { fg = "#4a4518" }
 perm_write = { fg = "#821d21" }
@@ -85,7 +85,7 @@ cand = { fg = "#7a6f0f" }
 rest = { fg = "#402e61" }
 desc = { fg = "#083142" }
 separator = "  "
-separator_style = { fg = "{{fg_muted}}" }
+separator_style = { fg = "#595069" }
 
 # HELP
 [help]
